agregado el control de la animacion y responsive extra

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                     <div class="last-number">0</div>
                 </div> -->
             </section>
-            <button class="btn">next</button>
+            <div class="btn-container">
+                <button class="btn btn-stop" data-play="true">stop</button>
+                <button class="btn btn-next">move</button>
+            </div>
         </main>
         <div class="modal-back">
             <div class="modal">
